[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Hayden <64056131+hay-kot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
